raw/ARSYAD SETIAWAN MUHAMMAD 6410 245150207111052/2024-11-14-08-27-58.ceg/compilation.txt
NT.java:8: error: cannot find symbol
        double[]input = input();
                        ^
  symbol:   method input()
  location: class NT
1 error
Not compiled
